<resources>
    <string name="ad_unit_id">ca-app-pub-6625736983247342/3126910513</string>
    <string name="error">Error</string>
    <string name="admin_group_request">Admin Group Request</string>
    <string name="request_for_join_the_group">Request for Join the Group</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="remove">Remove</string>
    <string name="exit_from_group">Exit from Group</string>
    <string name="add_member">Add Member</string>
    <string name="list">Search contest</string>
    <string name="member_search">Search and Add member</string>
    <string name="group_search">Search and Join to group</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="follow">Follow</string>
    <string name="participated">Participated</string>
    <string name="won">Won</string>
    <string name="history">History</string>
    <string name="group">Group</string>
    <string name="group_owner">Group Owner</string>
    <string name="my_profile">My Profile</string>
    <string name="view_profile">View Profile</string>
    <string name="participated_contest">Participated Contest</string>
    <string name="created_contest">Created Contest</string>
    <string name="invite">Invite</string>
    <string name="partial_invite">Partial Invite</string>
    <string name="owner_colon">Owner: </string>
    <string name="member_colon">Member: </string>
    <string name="member">Member</string>
    <string name="no_data_available">No Data Available</string>
    <string name="unfollow">Unfollow</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="contest_period">Contest Period</string>
    <string name="voting_period">Voting Period</string>
    <string name="contest_information">Contest Information</string>
    <string name="interest">Interest</string>
    <string name="x"> X  </string>
    <string name="ding">Ding</string>
    <string name="pass">Pass</string>
    <string name="posted_by">Posted by</string>
    <string name="current">CURRENT</string>
    <string name="upcoming">UPCOMING</string>
    <string name="archive">ARCHIVE</string>
    <string name="private_text">PRIVATE</string>
    <string name="photo">PHOTO</string>
    <string name="video">VIDEO</string>
    <string name="topic">TOPIC</string>
    <string name="contest_start_date">Contest Start Date</string>
    <string name="contest_end_date">Contest End Date</string>
    <string name="voting_start_date">Voting Start Date</string>
    <string name="voting_end_date">Voting End Date</string>
    <string name="gallery">Gallery</string>
    <string name="leader_board">Leader Board</string>
    <string name="join">Join</string>
    <string name="share">Share</string>
    <string name="vote">Vote</string>
    <string name="duration_colon">Duration: </string>
    <string name="to_colon">To: </string>
    <string name="prize_colon">Prize: </string>
    <string name="organizer">Organizer</string>
    <string name="sponsor">Sponsor</string>
    <string name="contest_description">Contest Description</string>
    <string name="upload_contest_photo">Upload Contest Photo</string>
    <string name="publish_photo">Publish Photo</string>
    <string name="choose_other">Choose Other</string>
    <string name="submit">Submit</string>
    <string name="invite_to_all">Invite to all</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="tumblr">Tumblr</string>
    <string name="flickr">Flickr</string>
    <string name="reply">Reply</string>
    <string name="back">Back</string>
    <string name="upload_topic_contest">Upload Topic Contest</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="email_username">Email/Username</string>
    <string name="email">Email</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="leave_your_comment">Leave your comment</string>
    <string name="contest_name">Contest Name</string>
    <string name="upload_contest_image">Upload Contest Image</string>
    <string name="upload_group_image"> Upload Group Image</string>
    <string name="contest_type">Contest Type</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="no_of_participant">No of Participant</string>
    <string name="un_limited">0 - Un limited</string>
    <string name="contest_prize">Contest Prize</string>
    <string name="create_contest">Create Contest</string>
    <string name="enter_valid_contest_name">Enter valid Contest Name</string>
    <string name="password_required">The password field is required.</string>
    <string name="not_a_member_yet">Not a member yet?,</string>
    <string name="app_name">Ding Datt</string>
    <string name="action_settings">Settings</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="sign_up">Signup</string>
    <string name="terms_service">I agree Terms of Service and Privacy Policy</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_pwd"><u>Forgot Password?</u></string>
    <string name="signin_facebook">Sign in using Facebook</string>
    <string name="signin_google">Sign in using Google</string>
    <string name="signup_email">Sign up</string>
    <string name="have_an_ac_login">Have an Account ? Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_contest">ContestActivity</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_contest_list_sample">ContestListSampleActivity</string>
    <string-array name="menu_list">
        <item></item>
        <item>My Profile</item>
        <item>Edit Profile</item>
        <item>List of Contest</item>
        <item>Create Contest</item>
        <item>My Contest</item>
        <item>Create Group</item>
        <item>List of Groups</item>
        <item>Notification</item>
        <item>Logout</item>
    </string-array>
    <string name="title_activity_contest_info_sample">ContestInfoSampleActivity</string>
    <string name="title_activity_contest_gallery">ContestGalleryActivity</string>
    <string name="title_activity_contest_voting">ContestVotingActivity</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="title_activity_create_edit_contest">CreateEditContestActivity</string>
    <string name="title_activity_my_contest">My Contest</string>
    <string name="title_activity_dummy">Dummy</string>
    <string name="login_instructions">Login to twiter</string>
    <string name="share_instructions">Enter share message</string>
    <string name="btn_login">Login to Twitter</string>
    <string name="btn_share">Share</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="title_activity_view_gallery">ViewGalleryActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_topic_dialog">TopicDialogActivity</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_create_edit_group">CreateEditGroupActivity</string>
    <string name="title_activity_group_list">GroupListActivity</string>
    <string name="title_activity_member_list">MemberListActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="contest_id">Contest id</string>
    <string name="enter_valid_topic">Enter valid topic.</string>
    <string name="internet_connection_not_available">Internet connection not available.</string>
    <string name="welcome">Welcome</string>
    <string name="processing_please_wait">Processing. Please wait.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="upload_image">Upload Image</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="facebook_page">Facebook Page</string>
    <string name="twitter_page">Twitter Page</string>
    <string name="instagram_page">Instagram Page</string>
    <string name="home_town">Home Town</string>
    <string name="time_zone">Time Zone</string>
    <string name="school">School</string>
    <string name="occupation_profession">Occupation / Profession</string>
    <string name="marital_status">Marital Status</string>
    <string name="number_of_kids">Number of Kids</string>
    <string name="favorite_holiday_spot">Favorite Holiday Spot</string>
    <string name="update_profile">Update Profile</string>
    <string name="invited">Invited</string>
    <string name="uninvite">Uninvite</string>
    <string name="edit_group_owner">Edit Group (Owner)</string>
    <string name="group_type">Group Type</string>
    <string name="c100">Failed.</string>
    <string name="c101">Required field is missing</string>
    <string name="c102">Successfully Login</string>
    <string name="c103">Invalid Password</string>
    <string name="c104">No user in this record</string>
    <string name="c105">Invalid Username Or Password</string>
    <string name="c106">The username or email has already been taken.</string>
    <string name="c107">Successfully added.</string>
    <string name="c109">Successfully updated.</string>
    <string name="c113">Contest Details fetched Successfully</string>
    <string name="c116">Data Get Successfully</string>
    <string name="c117">No Data Available</string>
    <string name="c121">Contest Participant Limit is crossed</string>
    <string name="c124">Record Fetched Successfully	</string>
    <string name="c125">Contest details for voting get Successfully</string>
    <string name="c127">voting updated successfully</string>
    <string name="c128">Getting Result details</string>
    <string name="c129">Successfully following.</string>
    <string name="c131">Followers List</string>
    <string name="c132">Getting Comments details</string>
    <string name="c133">No Comments Available in this Contest participant</string>
    <string name="c134">Comment saved successfully</string>
    <string name="c136">My Participated history</string>
    <string name="c137">Following member  List</string>
    <string name="c138">My Profile Details</string>
    <string name="c139">Language Details Fetched Successfully</string>
    <string name="c140">Language Names are fetched Successfully</string>
    <string name="c141">Group Details saved successfully</string>
    <string name="c142">The groupname has already been taken.</string>
    <string name="c143">Group Details Fetched successfully</string>
    <string name="c145">Group Details Updated successfully</string>
    <string name="c147">Group List fetched successfully</string>
    <string name="c150">Success</string>
    <string name="c151">You are removed from that group</string>
    <string name="c152">Such User is not available in this group</string>
    <string name="c153">You are removed the following person</string>
    <string name="c154">Such following person is not available</string>
    <string name="c156">successfully created Login</string>
    <string name="c161">Reply Comments successfully</string>
</resources>