<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_unit_id" />

    <LinearLayout
        android:id="@+id/tab2"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/tab1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/participated"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_border1"
            android:gravity="center"
            android:text="@string/participated_contest"
            android:textColor="#000000"
            android:textSize="13dp" />

        <Button
            android:id="@+id/created"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#73DBFF"
            android:gravity="center"
            android:text="@string/created_contest"
            android:textColor="#000000"
            android:textSize="13dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5dp" >
    </ListView>

</LinearLayout>