<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo_large" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/fb_login_button"
            android:layout_width="@dimen/username_width"
            android:layout_height="45dp"
            android:layout_below="@id/fb_login_button"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:background="@drawable/facebook_button_select"
            android:gravity="center"
            android:text="@string/signin_facebook"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/google"
            android:layout_width="@dimen/username_width"
            android:layout_height="45dp"
            android:layout_below="@id/fb_login_button"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:background="@drawable/google_button_select"
            android:gravity="center"
            android:text="@string/signin_google"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/email"
            android:layout_width="@dimen/username_width"
            android:layout_height="45dp"
            android:layout_below="@id/google"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:background="@drawable/email_button_select"
            android:gravity="center"
            android:text="@string/signup_email"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/login"
            android:layout_width="@dimen/username_width"
            android:layout_height="45dp"
            android:layout_below="@+id/email"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:background="@drawable/signin_button_select"
            android:gravity="center"
            android:text="@string/have_an_ac_login"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>