<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_unit_id" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#45B3AA"
            android:gravity="center"
            android:padding="5dp" >

            <TextView
                android:id="@+id/adminreqcount"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/noti_round_corner"
                android:gravity="center"
                android:text=""
                android:textColor="#54C418"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adminrequest"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:paddingLeft="5dp"
                android:text="@string/admin_group_request"
                android:textColor="#ffffff"
                android:textSize="14dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#21739A"
            android:gravity="center"
            android:padding="5dp" >

            <TextView
                android:id="@+id/joinreqcount"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/noti_round_corner"
                android:gravity="center"
                android:text=""
                android:textColor="#54C418"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/joinrequest"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/request_for_join_the_group"
                android:textColor="#ffffff"
                android:textSize="14dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ListView
            android:id="@+id/listview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#88000000"
        android:gravity="center" >

        <Button
            android:id="@+id/accept"
            android:layout_width="120dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:background="@drawable/button_select"
            android:text="@string/accept" />

        <Button
            android:id="@+id/reject"
            android:layout_width="120dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:background="@drawable/button_select"
            android:text="@string/reject" />
    </LinearLayout>

</LinearLayout>