<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >
    
    <com.google.android.gms.ads.AdView
     android:id="@+id/adView"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     ads:adSize="BANNER"
     ads:adUnitId="@string/ad_unit_id"/>
    
    <ScrollView 
        android:layout_below="@+id/adView"
        android:id="@+id/scroll"
        android:layout_above="@+id/button"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">
        
        <LinearLayout 
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent">
            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:layout_margin="5dp" >

                <LinearLayout
                    android:layout_width="40dp"
                    android:layout_height="fill_parent" >

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/border_blue_left"
                        android:scaleType="center"
                        android:src="@drawable/bell_white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" >

                    <EditText
                        android:id="@+id/group_name"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/border_white_right"
                        android:hint="@string/group"
                        android:maxLength="30"
                        android:singleLine="true"
                        android:paddingLeft="5dp"
                        android:textColor="#000000"
                        android:textSize="15dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:layout_margin="5dp" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" >

                    <com.bizarre.dingdatt.adapter.RoundedImageView
                        android:id="@+id/group_image2"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:scaleType="center"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/group_image"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/border_white_left"
                        android:gravity="center|left"
                        android:hint="@string/upload_group_image"
                        android:maxLength="30"
                        android:singleLine="true"
                        android:paddingLeft="5dp"
                        android:textColor="#000000"
                        android:textSize="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="40dp"
                    android:layout_height="fill_parent" >

                    <ImageView
                        android:id="@+id/group_image1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/border_blue_right"
                        android:scaleType="center"
                        android:src="@drawable/upload_photo_icon" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:layout_margin="5dp" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" >

                    <Spinner
                        android:id="@+id/group_type"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/border_white_left"
                        android:textColor="#000000"
                        android:hint="@string/group_type"
                        android:paddingLeft="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="40dp"
                    android:layout_height="fill_parent" >

                    <ImageView
                        android:id="@+id/group_type1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/border_blue_right"
                        android:scaleType="center"
                        android:src="@drawable/selectbox_down_icon" />
                </LinearLayout>
            </LinearLayout>
            
            
            <LinearLayout 
                android:id="@+id/invite"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_width="280dp">
                <TextView 
                    android:layout_height="30dp"
                    android:layout_width="fill_parent"
                    android:text="@string/invite"
                    android:layout_marginBottom="5dp"
                    android:gravity="center|left"
                    android:textColor="#ffffff"/>
                <LinearLayout 
                    android:layout_height="35dp"
                    android:background="#ffffff"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent">
                    <CheckBox 
                        android:id="@+id/Followers"
                        android:layout_height="fill_parent"
                        android:layout_width="0dp"
                        android:textColor="#000000"
                        android:text="@string/followers"
                        android:layout_weight="1"/>
                    
                    <CheckBox 
                        android:id="@+id/Following"
                        android:layout_height="fill_parent"
                        android:layout_width="0dp"
                        android:textColor="#000000"
                        android:text="@string/following"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    
    <LinearLayout 
        android:id="@+id/button"
        android:layout_height="45dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent">
        
        <Button 
            android:id="@+id/update"
            android:layout_height="40dp"
            android:text="@string/update"
            android:textColor="#ffffff"
            android:background="@drawable/signin_button_select"
            android:layout_width="150dp"/>
    </LinearLayout>
</RelativeLayout>
